flowc/tests/fixtures/check_e151_unknown_where_field.flow
type User = { id: string }
type Plan = { id: string, cost: int }

tool best_plans() -> [Plan]
  effect deterministic

flow demo(User) -> [Plan] {
  ps = best_plans()
     | where nonexistent_field <= 100
  ps
}
